<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".MainActivity">

	<EditText
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:ems="10"
			android:id="@+id/etv_endpoint"
			app:layout_constraintStart_toStartOf="@+id/guideline"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintTop_toTopOf="@+id/tv_endpoint"
			app:layout_constraintBottom_toBottomOf="@+id/tv_endpoint"/>
	<TextView
			android:text="@string/main_endpoint"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginTop="24dp"
			android:layout_marginStart="16dp"
			android:id="@+id/tv_endpoint"
	/>
	<androidx.constraintlayout.widget.Guideline
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/guideline"
			app:layout_constraintGuide_begin="94dp"/>
	<EditText
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:ems="10"
			android:id="@+id/etv_key"
			app:layout_constraintStart_toStartOf="@+id/guideline"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@+id/tv_key"
			app:layout_constraintBottom_toBottomOf="@+id/tv_key" app:layout_constraintHorizontal_bias="0.0"
	/>
	<EditText
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:inputType="numberDecimal"
			android:ems="10"
			android:id="@+id/etv_interval"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guideline"
			app:layout_constraintTop_toTopOf="@+id/tv_interval"
			app:layout_constraintBottom_toBottomOf="@+id/tv_interval"
			android:text="@string/main_interval_default_value" app:layout_constraintHorizontal_bias="0.0"
	/>
	<TextView
			android:text="@string/main_key"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="16dp"
			android:id="@+id/tv_key"
			app:layout_constraintTop_toBottomOf="@+id/tv_endpoint" android:layout_marginTop="32dp"/>
	<TextView
			android:text="@string/main_interval"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="16dp" android:id="@+id/tv_interval" android:layout_marginTop="24dp"
			app:layout_constraintTop_toBottomOf="@+id/tv_key"/>
	<Button
			android:text="@string/button_start"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/button_start"
			android:visibility="visible"
			app:layout_constraintStart_toStartOf="@+id/guideline"
			app:layout_constraintTop_toBottomOf="@+id/etv_interval" android:layout_marginTop="24dp"/>
	<Button
			android:text="@string/main_copy_link"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/button_copy_link"
			app:layout_constraintTop_toBottomOf="@+id/button_start"
			app:layout_constraintStart_toStartOf="@+id/guideline"
			android:layout_marginTop="8dp"/>
	<Button
			android:text="@string/main_stop"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/button_stop"
			app:layout_constraintStart_toEndOf="@+id/button_start"
			app:layout_constraintTop_toBottomOf="@+id/etv_interval"
			android:layout_marginTop="24dp"
			android:layout_marginStart="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>